--- a/2023.03.07 jQuery/index.html
+++ b/2023.03.07 jQuery/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> currency calculator </title>
     <script src="jquery.min.js"> </script>
-    <script src="./index.js"></script>
+    <script src="index.js"> </script>
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
