--- a/2023.03.07 jQuery/index.html
+++ b/2023.03.07 jQuery/index.html
@@ -17,7 +17,7 @@
             <div> 
                 <input type="text" id="amount_input">  
                 <button class="currency_dropdown_toggle" id="button_in" type="button" >  
-                    Ukranian Hrivnya
+                    <p id="input_button_name"></p>
                     <ul id="in" hidden>
                         <p>  Ukranian Hrivnya </p>
                         <p>  US Dollar </p>
@@ -32,8 +32,8 @@
 
             <div> 
                 <div id="amount_output"> 100000 </div>
-                <button class="currency_dropdown_toggle" id="button_out" type="button" >  
-                    Ukranian Hrivnya
+                <button class="currency_dropdown_toggle" id="button_out" type="button">  
+                    <p id="input_button_name"></p>
                     <ul id="out" hidden>
                         <p>  Ukranian Hrivnya </p>
                         <p>  US Dollar </p>
@@ -41,13 +41,11 @@
                         <p>  Ukranian Hrivnya </p>
                         <p>  US Dollar </p>
                         <p>  Canadian Dollar </p>
-                    </ul>   
+                    </ul> 
                 </button>
-              
-            </div>
-
-            
+            </div>    
         </div>
+
         <button id="calculate">
             calculate 
         </button>
