--- a/2023.03.07 jQuery/v2/index.html
+++ b/2023.03.07 jQuery/v2/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> currency calculator </title>
+    <title> Converter </title>
     <script src="jquery.min.js"> </script>
     <script src="index.js"> </script>
     <link rel="stylesheet" href="./styles.css">
@@ -12,24 +8,12 @@
 </head>
 <body>
     <div class="currency" id="currency_in">
-        <input type="text">
-        <select name="name" id="">
-            <option value=""> Ukranian Hrivnya </option>
-            <option value=""> US Dollar </option>
-            <option value=""> Canadian Dollar </option>
-        </select>
-        
+        <input type="number">
+        <select id="select_currency_in"> </select>
     </div>
-    
     <div class="currency" id="currency_out">
-        <p> 123123</p>
-        <select name="name" id="">
-            <option value=""> Ukranian Hrivnya </option>
-            <option value=""> US Dollar </option>
-            <option value=""> Canadian Dollar </option>
-        </select>
+        <p></p>
+        <select id="select_currency_out"> </select>
     </div>
-
-    <button> calculate </button>
 </body>
 </html>
