--- a/2023.03.21 Basics of JS/lab5 events/task3 mixColors/index.html
+++ b/2023.03.21 Basics of JS/lab5 events/task3 mixColors/index.html
@@ -3,6 +3,11 @@
         width:  50px;
         height: 50px;
     }
+    #display {
+        width: 200px;
+        height: 200px;
+    }
+    
 
 </style>
 
@@ -33,8 +38,8 @@
             <th style="background-color:rgb(118, 122, 107);"></th>
             <th style="background-color:rgb(133, 107, 118);"></th>
         </tr>
-
     </table>
+    <div style="background: linear-gradient(#e66465, #9198e5);" id="display"> 1 </div>
 </body>
 
 </html>
