--- a/2023.03.21 Basics of JS/lab1 basics/1_burgerCost/js/index.html
+++ b/2023.03.21 Basics of JS/lab1 basics/1_burgerCost/js/index.html
@@ -8,7 +8,7 @@
     <input type="number" id="cost">
     <p> Гроші у гаманці </p>
     <input type="number" id="wallet">
-    <button id="calc"> Порахувати </button>
+    <button id="calc" onclick="handleButtonClick()"> Порахувати </button>
     <p> Бургерів можна купити: </p>
     <p id="amount"></p>
     <p> Грошей залишиться: </p>
